feat: add executable command
add executable youtube-downloader command in Cargo file and describe it
in README

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ authors = ["smoqadam <phpro.ir@gmail.com>"]
 hyper="*"
 hyper-native-tls="*"
 pbr="*"
+
+[[bin]]
+name = "youtube-downloader"
+path = "src/main.rs"
