Add verbose debug in stderr
Add new CLI option -v to increase verbosity. The stderrlog crate is used
to print messages to stderr. Error messages are also sent to stderr
using the error!() macro.

Added a couple debug prints for the video info fetch and the stream
information, these can be seen with -vvv

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ hyper-native-tls="0.2.2"
 pbr = "1.0.0-alpha.3"
 clap="2.23.2"
 regex="0.2.1"
+log = "0.3"
+stderrlog = "0.2"
 
 [[bin]]
 name = "youtube-downloader"
