--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ stderrlog = "0.2"
 serde_derive = "1.0"
 serde = "1.0"
 serde_urlencoded = "0.5.1"
+url = "1.0"
+
+[dev-dependencies]
+reqwest = "0.8"
 
 [[bin]]
 name = "youtube-downloader"
